add more config options and update defaults